menší fix, scripty v headeru, overflow: auto

--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,8 @@ img {
 #body_div {
     position: absolute;
     width: 100%;
-    aspect-ratio: 16/8;
+    aspect-ratio: 16/7.9;
+    overflow-y: auto;
 }
 
 #back_to_menu {
